ES-005.7
All required changes are done